--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ client/yarn-debug.log*
 client/yarn-error.log*
 
 # local env files
+client/.env
 client/.env.local
 client/.env.development.local
 client/.env.test.local
@@ -33,4 +34,19 @@ client/.env.production.local
 # vercel
 client/.vercel
 
-sanity/node_modules
+strapi/.env
+strapi/license.txt
+strapi/exports
+strapi/.cache
+strapi/build
+
+strapi/lib-cov
+strapi/lcov.info
+strapi/pids
+strapi/logs
+strapi/results
+strapi/node_modules
+strapi/.node_history
+strapi/.tmp
+
+/node_modules
