--- a/client/package.json
+++ b/client/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "9.5.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-feather": "^2.0.8",
-    "react-responsive": "^8.1.0",
-    "react-transition-group": "^4.4.1",
-    "styled-components": "^5.1.1"
-  },
-  "devDependencies": {
-    "babel-plugin-styled-components": "^1.8.0"
-  }
+	"name": "my-app",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"axios": "^0.20.0",
+		"moment": "^2.27.0",
+		"next": "9.5.1",
+		"react": "16.13.1",
+		"react-dom": "16.13.1",
+		"react-feather": "^2.0.8",
+		"react-markdown": "^4.3.1",
+		"react-moment": "^0.9.7",
+		"react-responsive": "^8.1.0",
+		"react-transition-group": "^4.4.1",
+		"styled-components": "^5.1.1"
+	},
+	"devDependencies": {
+		"babel-plugin-styled-components": "^1.8.0"
+	},
+	"proxy": "localhost:1337"
 }
