--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "npm run dev --prefix client",
     "strapi": "npm run develop --prefix strapi",
-    "dev": "concurrently \"npm run strapi\" \"npm run client\""
+    "dev": "concurrently \"npm run strapi\" \"npm run client\"",
+    "heroku-postbuild": "npm run build --prefix strapi"
   },
   "repository": {
     "type": "git",
