--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "client": "npm run dev --prefix client",
     "strapi": "npm run develop --prefix strapi",
     "dev": "concurrently \"npm run strapi\" \"npm run client\"",
-    "build": "npm run develop --prefix strapi",
-    "start": "node server.js"
+    "build": "npm run develop --prefix strapi"
   },
   "repository": {
     "type": "git",
@@ -21,9 +20,7 @@
     "url": "https://github.com/Sarah-Burnett/coaching-mind/issues"
   },
   "homepage": "https://github.com/Sarah-Burnett/coaching-mind#readme",
-  "dependencies": {
-    "concurrently": "^5.3.0",
-    "express": "^4.17.1",
-    "pg": "^8.4.1"
+  "devDependencies": {
+    "concurrently": "^5.3.0"
   }
 }
