--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,6 @@
 		"start": "next start"
 	},
 	"dependencies": {
-		"axios": "^0.20.0",
 		"moment": "^2.27.0",
 		"next": "9.5.1",
 		"react": "16.13.1",
@@ -17,6 +16,7 @@
 		"react-markdown": "^4.3.1",
 		"react-moment": "^0.9.7",
 		"react-responsive": "^8.1.0",
+		"react-spring": "^8.0.27",
 		"react-transition-group": "^4.4.1",
 		"styled-components": "^5.1.1"
 	},
