--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
 		"start": "next start"
 	},
 	"dependencies": {
+		"axios": "^0.21.0",
 		"moment": "^2.27.0",
 		"next": "9.5.1",
 		"react": "16.13.1",
